Bug 1580346 - Initialize table-row and table-row-group borders to zero in border-collapse:separate tables.  r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D45940